fix scroll trang QL Giao vien

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -609,64 +609,67 @@
                     </div>
                 </form>
             </div>
-            <table class="class-table">
-                <thead>
-                    <tr>
-                        <th>Họ tên</th>
-                        <th>Email</th>
-                        <th>Số điện thoại</th>
-                        <th>Môn dạy</th>
-                        <th>Lớp dạy</th>
-                        <th>Chủ nhiệm</th>
-                        <th>Trạng thái</th>
-                        <th>Thao tác</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Nguyễn Thị Lan</td>
-                        <td>lan.nguyen@school.edu.vn</td>
-                        <td>0987654321</td>
-                        <td>Toán</td>
-                        <td><span class="status activeclass1">1A</span> <span class="status activeclass1">1B</span></td>
-                        <td><span class="status activeclass">1A</span></td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Trần Thị M</td>
-                        <td>mtran@school.edu.vn</td>
-                        <td>0369852147</td>
-                        <td>Văn</td>
-                        <td>
-                            <span class="status activeclass1">1A</span>
-                            <span class="status activeclass1">1B</span>
-                        </td>
-                        <td><span class="status activeclass">1B</span></td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Đào Thị B</td>
-                        <td>bdao@school.edu.vn</td>
-                        <td>0123456789</td>
-                        <td>Anh</td>
-                        <td><span class="status activeclass1">2A</span></td>
-                        <td><span class="status activeclass">2A</span></td>
-                        <td><span class="status activeclass">Hoạt động</span></td>
-                        <td class="actions">
-                            <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-teacher-wrapper">
+                <table class="class-table">
+                    <thead>
+                        <tr>
+                            <th>Họ tên</th>
+                            <th>Email</th>
+                            <th>Số điện thoại</th>
+                            <th>Môn dạy</th>
+                            <th>Lớp dạy</th>
+                            <th>Chủ nhiệm</th>
+                            <th>Trạng thái</th>
+                            <th>Thao tác</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Nguyễn Thị Lan</td>
+                            <td>lan.nguyen@school.edu.vn</td>
+                            <td>0987654321</td>
+                            <td>Toán</td>
+                            <td><span class="status activeclass1">1A</span> <span class="status activeclass1">1B</span>
+                            </td>
+                            <td><span class="status activeclass">1A</span></td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Trần Thị M</td>
+                            <td>mtran@school.edu.vn</td>
+                            <td>0369852147</td>
+                            <td>Văn</td>
+                            <td>
+                                <span class="status activeclass1">1A</span>
+                                <span class="status activeclass1">1B</span>
+                            </td>
+                            <td><span class="status activeclass">1B</span></td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Đào Thị B</td>
+                            <td>bdao@school.edu.vn</td>
+                            <td>0123456789</td>
+                            <td>Anh</td>
+                            <td><span class="status activeclass1">2A</span></td>
+                            <td><span class="status activeclass">2A</span></td>
+                            <td><span class="status activeclass">Hoạt động</span></td>
+                            <td class="actions">
+                                <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
         <section id="schedule" class="page">
             <div class="schedule-header">
