--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styleGV.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
+
 </head>
 <body>
 <!----------------- Thanh thông tin ------------------->
@@ -100,24 +103,24 @@
             <h3>Hoạt động gần đây</h3>
             <h3 style="color: gray;">Công việc và thông báo mới nhất</h3>
             <div class="HOATDONGGAN" id="HD1">
-                <h3 style="display: flex;justify-content: space-between;margin-right: 10px;margin-bottom: 0px;">
+                <h3 >
                     <span>Điểm danh lớp 6A</span>
-                    <span style="background-color: black;color:white;border-radius: 15px;padding: 5px;">Điểm danh</span>
-                </H3>
+                    <span  class="diemdanhhd" >Điểm danh</span>
+                </h3>
                 <span style="color: gray;">20 phút trước</span>
             </div>
             <div class="HOATDONGGAN" id="HD2">
-                <h3 style="display: flex;justify-content: space-between;margin-right: 10px;margin-bottom: 0px;">
+                <h3 >
                     <span>Phụ huynh Nguyễn Thị B gửi tin nhắn về học sinh Nguyễn Văn A</span>
-                    <span style="background-color: white;color:black;border: 1px solid black;border-radius: 15px;padding: 5px;">Tin nhắn</span>
-                </H3>
+                    <span class="tinnhanhd" >Tin nhắn</span>
+                </h3>
                 <span style="color: gray;">1 giờ trước</span>
             </div>
             <div class="HOATDONGGAN" id="HD3">
-                <h3 style="display: flex;justify-content: space-between;margin-right: 10px;margin-bottom: 0px;">
+                <h3 >
                     <span>Cập nhật điểm kiểm tra 15 phút lớp 7A</span>
-                    <span style="background-color: gray;text-align: center;color:black;border-radius: 15px;padding: 5px;">Điểm số</span>
-                </H3>
+                    <span class="diemsohd" >Điểm số</span>
+                </h3>
                 <span style="color: gray;">2 giờ trước</span>
             </div>
         </div>
@@ -1022,6 +1025,6 @@
     </div>
 
     <script src="jvGV.js"></script>
-
+    
 </body>
 </html>
