--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -14,8 +14,8 @@
                 <span class="icon"><i class="fa-solid fa-circle-user"></i>
 </span>
                 <div>
-                    <h3>Phụ huynh - Lê Văn C</h3>
-                    <p>Học sinh: Nguyễn Văn A • Lớp 6A</p>
+                    <h3>Phụ huynh - Lê Văn Cần</h3>
+                    <p>Học sinh: Nguyễn Văn An • Lớp 6A</p>
                 </div>
             </div>
             <a href="../index.html"><button class="logout">Đăng xuất</button></a>
@@ -63,11 +63,11 @@
                     <!-- Danh sách chat -->
                     <div class="chat-list" id="chatList">
                     <div class="chat-item active" onclick="selectChat(0)">
-                        <span class="name">Nguyễn Văn A</span>
+                        <span class="name">Nguyễn Văn Anh</span>
                         <span class="badge">1</span>
                     </div>
                     <div class="chat-item" onclick="selectChat(1)">
-                        <span class="name">Trần Thị B</span>
+                        <span class="name">Trần Thị Bình</span>
                         <span class="badge">1</span>
                     </div>
                     </div>
@@ -89,7 +89,7 @@
         <section class="info-grid">
         <div class="info-card">
             <h3>Thông tin học sinh</h3>
-            <p><strong>Họ tên:</strong> <span>Nguyễn Văn A</span></p>
+            <p><strong>Họ tên:</strong> <span>Nguyễn Văn Aa</span></p>
             <p><strong>Lớp:</strong> <span class="class-badge">6A</span></p>
             <p><strong>GVCN:</strong> <span>Nguyễn Thị Lan</span></p>
             <p><strong>SDT giáo viên:</strong> <span>0123456789</span></p>
