--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -70,11 +70,11 @@
                 <p>Học sinh đến muộn</p>
             </div>
             <div id="ChoChamDiem">
-                <h4>Chấm điểm
+                <h4>Lớp Dạy
                     <img src="../img/page.png" alt="anh">
                 </h4>
-                <h2>1</h2>
-                <p>Bài thi đã chấm</p>
+                <h2>3</h2>
+                <p>Lớp dạy</p>
             </div>
         </div>
         <div id="LopDay">
@@ -178,7 +178,7 @@
                         <span class="MaHS">HS001</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn A</span>
+                        <span class="TenHS">Nguyễn Văn An</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
@@ -201,7 +201,7 @@
                         <span class="MaHS">HS002</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn B</span>
+                        <span class="TenHS">Nguyễn Văn Hải</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
@@ -224,7 +224,7 @@
                         <span class="MaHS">HS003</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn C</span>
+                        <span class="TenHS">Nguyễn Văn Cương</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
@@ -247,7 +247,7 @@
                         <span class="MaHS">HS004</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn V</span>
+                        <span class="TenHS">Nguyễn Văn Vân</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
@@ -270,7 +270,7 @@
                         <span class="MaHS">HS005</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn T</span>
+                        <span class="TenHS">Nguyễn Văn Khá</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
@@ -293,7 +293,7 @@
                         <span class="MaHS">HS006</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn F</span>
+                        <span class="TenHS">Nguyễn Văn Lân</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
@@ -316,7 +316,7 @@
                         <span class="MaHS">HS007</span>
                     </td>
                     <td>
-                        <span class="TenHS">Nguyễn Văn G</span>
+                        <span class="TenHS">Nguyễn Văn Linh</span>
                     </td>
                     <td>
                         <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;align-items: center;"><i class="fa-solid fa-circle-check"></i></button>
@@ -327,7 +327,76 @@
                         <span class="GhiChuTTDD">-</span>
                     </td>
                     <td>
-                        <span class="GhiCHuDD" >(Không quá 25 từ)</span>
+                        <span class="GhiCHuDD" style="color: gray;" >(Không quá 25 từ)</span>
+                        <button class="btnGHICHUDD" >Ghi chú</button>
+                    </td>
+                </tr>
+                <tr class="rowDD">
+                    <td>
+                        <span class="STTDIemDanh">8</span>
+                    </td>
+                    <td>
+                        <span class="MaHS">HS008</span>
+                    </td>
+                    <td>
+                        <span class="TenHS">Nguyễn Văn Hieu</span>
+                    </td>
+                    <td>
+                        <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;align-items: center;"><i class="fa-solid fa-circle-check"></i></button>
+                        <button class="btnDDVangMat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-xmark"></i></button>
+                        <button class="btnDDDiMuon" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-clock"></i></button>
+                    </td>
+                    <td>
+                        <span class="GhiChuTTDD">-</span>
+                    </td>
+                    <td>
+                        <span class="GhiCHuDD" style="color: gray;" >(Không quá 25 từ)</span>
+                        <button class="btnGHICHUDD" >Ghi chú</button>
+                    </td>
+                </tr>
+                <tr class="rowDD">
+                    <td>
+                        <span class="STTDIemDanh">9</span>
+                    </td>
+                    <td>
+                        <span class="MaHS">HS009</span>
+                    </td>
+                    <td>
+                        <span class="TenHS">Nguyễn Văn Lâm</span>
+                    </td>
+                    <td>
+                        <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;align-items: center;"><i class="fa-solid fa-circle-check"></i></button>
+                        <button class="btnDDVangMat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-xmark"></i></button>
+                        <button class="btnDDDiMuon" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-clock"></i></button>
+                    </td>
+                    <td>
+                        <span class="GhiChuTTDD">-</span>
+                    </td>
+                    <td>
+                        <span class="GhiCHuDD" style="color: gray;" >(Không quá 25 từ)</span>
+                        <button class="btnGHICHUDD" >Ghi chú</button>
+                    </td>
+                </tr>
+                <tr class="rowDD">
+                    <td>
+                        <span class="STTDIemDanh">10</span>
+                    </td>
+                    <td>
+                        <span class="MaHS">HS010</span>
+                    </td>
+                    <td>
+                        <span class="TenHS">Nguyễn Vũ Linh</span>
+                    </td>
+                    <td>
+                        <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;align-items: center;"><i class="fa-solid fa-circle-check"></i></button>
+                        <button class="btnDDVangMat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-xmark"></i></button>
+                        <button class="btnDDDiMuon" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-clock"></i></button>
+                    </td>
+                    <td>
+                        <span class="GhiChuTTDD">-</span>
+                    </td>
+                    <td>
+                        <span class="GhiCHuDD" style="color: gray;" >(Không quá 25 từ)</span>
                         <button class="btnGHICHUDD" >Ghi chú</button>
                     </td>
                 </tr>
@@ -397,7 +466,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <span id="HSSK">Nguyễn Văn A</span><br>
+                        <span id="HSSK">Nguyễn Văn An</span><br>
                     </td>
                     <td>
                         <span class="TinhtrangSK" >Khỏe mạnh</span>
@@ -418,7 +487,6 @@
                         <button class="btnGHICHUSK" ><i class="fa-solid fa-edit"></i></button>
                     </td>
                 </tr>
-                
             </table>
         </div>
 
