--- a/XacThuc/dangnhap.html
+++ b/XacThuc/dangnhap.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="jquery-3.7.1.min.js"></script>
+    <script src="../jquery-3.7.1.min.js"></script>
+    <script src="../angular.min.js"></script>
     <script src="dangnhap.js"></script>
 
     <title>Trường Tiểu học tương lai</title>
@@ -22,7 +23,7 @@
                 <h3>Hệ thống Quản lý trường Tiểu học</h3>
                 <p>Đăng nhập vào hệ thống</p>
             </div>
-            <div class="dangnhap-form" id="loginForm">
+            <form class="dangnhap-form" id="loginForm">
                 <label for="email">Email</label>
                 <input type="email" id="email" placeholder="Nhập email">
 
@@ -34,14 +35,14 @@
                 <div class="select-wrapper">
                     <select id="vaitro">
                         <option value="admin">Quản trị viên</option>
-                        <option value="giaovien">Giáo viên</option>
-                        <option value="phuhuynh">Phụ huynh</option>
+                        <option value="teacher">Giáo viên</option>
+                        <option value="parent">Phụ huynh</option>
                     </select>
                 </div>
 
 
                 <button class="dangnhap-button" type="submit">Đăng nhập</button>
-            </div>
+            </form>
         </div>
     </div>
 </body>
